Fix two small bugs:
1) Help button was overlapping wheel too much on mobile
2) If you first click select mode down, it didn't register. If the
   modeIndex was below 0 the wheel would not turn.

--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@ body {
   cursor: pointer;
   font-size: 36px;
   position: fixed;
-  bottom: 5%;
+  bottom: 0;
   left: 5%;
   border-radius: 100%;
   background-color: purple;
@@ -77,10 +77,6 @@ body {
   display: flex;
   flex-direction: row;
   z-index: 10; /* so they can be clicked even when corner of images are above them */
-}
-
-.rotate-buttons div {
-  cursor: pointer;
 }
 
 #wheel-buttons-container {
